manifests/environments/nostromo/minio/tenants/b4mad-racing-stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    route.openshift.io/termination: reencrypt # https://dentrassi.de/2021/05/21/using-ingress-on-openshift-backed-by-routes/
  name: minio-nostromo-stage.b4mad.racing
spec:
  ingressClassName: openshift-default
  rules:
    - host: minio-nostromo-stage.b4mad.racing
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: b4mad-racing-stage-console
                port:
                  name: https-console
  tls:
    - hosts:
        - minio-nostromo-stage.b4mad.racing
      secretName: minio-nostromo-stage.b4mad.racing
